Fixed Appbar naming issue

--- a/app/src/main/res/layout/comic_detail_fragment.xml
+++ b/app/src/main/res/layout/comic_detail_fragment.xml
@@ -18,6 +18,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                app:title="@{comic.title}" />
+
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
@@ -28,7 +35,10 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp">
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginLeft="20dp">
 
                     <ImageView
                         android:id="@+id/thumb"
@@ -93,6 +103,8 @@
                     android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    tools:listitem="@layout/list_item_images"
+                    tools:itemCount="2"
                     android:layout_marginTop="10dp" />
 
                 <TextView
@@ -127,7 +139,10 @@
                     android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    tools:listitem="@layout/list_item_url"
+                    tools:itemCount="3"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
