--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="character"
             type="com.example.marvelclient.model.character.Character" />
@@ -13,8 +14,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="18dp"
         android:orientation="vertical"
+        android:padding="18dp"
         tools:context=".characterDetail.tabsFragments.AboutFragment">
 
         <TextView
@@ -23,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{character.name}"
-            tools:text="Iron Man"
-            android:textSize="30sp" />
+            android:textSize="30sp"
+            tools:text="Iron Man" />
 
         <TextView
             android:id="@+id/descHeader"
@@ -41,9 +42,9 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
             android:text="@{character.description,default=@string/descriptionText}"
+            android:textColor="@android:color/white"
             android:textSize="20sp"
-            tools:text="@string/long_text"
-            android:textColor="@android:color/white" />
+            tools:text="@string/long_text" />
 
         <View
             android:layout_width="match_parent"
@@ -62,9 +63,9 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recView"
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     </LinearLayout>
